[package]
name = "whatversion"
version = "0.2.0"
edition = "2021"
authors = ["Ivan Guerreschi"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] } 
